--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ html {
 body {
    background-image: url("../images/car_back.jpg");
    background-repeat: no-repeat;
-   background-size: cover;    
+   background-size: cover;
+   background-attachment: fixed;
 
    color: white;
 }
