--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 .container {
     background: linear-gradient(#28a8afBB, #323232BB );
     position: absolute;
-    width: 1200px;
+    width: 90%;
     border-radius: 50px;
 
     margin-top: 4em;
@@ -40,7 +40,7 @@ body {
 
 .textProduct {
     font-size: 22px;
-    padding: 5em 3em 5em 3em;
+    padding: 2em 3em 5em 3em;
     text-align: justify;
 
     line-height: 2.5rem;
@@ -93,8 +93,6 @@ body {
     width: 2rem; 
 }
 
-
-
 /* Contato */
 footer{
     clear:left;
@@ -115,4 +113,52 @@ footer a{
 .itemList {
     line-height: 1.8rem;
     font-size: 1.3rem;
+}
+
+@media (max-width: 700px) {
+    body{
+        background-image: url("../images/backPorshe.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    .container {
+        background: linear-gradient(#28a8afBB, #323232BB );
+        position: absolute;
+        width: 90%;
+        border-radius: 50px;
+    
+        margin-top: 2em;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #logoAiSim {
+        margin-top: -1rem;
+        width: 70%;
+        position: relative;
+        left: 50%;
+    }
+
+    #produtosAiSim {
+        position: relative;
+        clear:both;
+        display: block;
+
+        margin: 2em 0 0 0;
+        width: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .textProduct {
+        display: inline-block;
+
+        font-size: 20px;
+        padding: 1em;
+        text-align: justify;
+    
+        line-height: 1.5rem;
+    }
 }
