--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,6 @@ body {
    color: white;
 }
 
-#logoAiSim {
-    margin-top: -2rem;
-    width: 50%;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .container {
     background: linear-gradient(#28a8afBB, #323232BB );
     position: absolute;
@@ -32,10 +24,24 @@ body {
     transform: translateX(-50%);
 }
 
+#logoAiSim {
+    margin-top: -2rem;
+    width: 50%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 #produtosAiSim {
     float: left;
     width: 30%;
-    margin: 2em;   
+    margin: 2em;
+
+    transition: 0.5s;
+}
+
+#produtosAiSim:hover {
+    transform: translateY(-10%);
 }
 
 .textProduct {
@@ -80,7 +86,7 @@ body {
 
     text-decoration: none;
 
-    transition: 0.2s;
+    transition: 0.5s;
     margin-left: 1rem;    
 }
 
@@ -90,7 +96,7 @@ body {
 }
 
 .iconWhats {
-    width: 2rem; 
+    width: 2rem;
 }
 
 /* Contato */
@@ -141,12 +147,20 @@ footer a{
         left: 50%;
     }
 
+    
+
     #produtosAiSim {
         position: relative;
         clear:both;
         display: block;
 
         margin: 2em 0 0 0;
+        width: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #produtosAiSim:hover {
         width: 50%;
         left: 50%;
         transform: translateX(-50%);
